--- a/index.html
+++ b/index.html
@@ -44,6 +44,26 @@
         line-height: 24px;
       }
 
+      /* Video pitch and Action */
+      .pitch {
+        padding: 2.5% 0%;
+      }
+      .order {
+        padding: 2% 0%;
+      }
+      .actions {
+        background-color: #343434;
+        padding: 3% 0%;
+      {
+      .video, .thermometer, .order, .social, .statistics {
+        text-align: center;
+      }
+      .statistics h3, .statistics p {
+        colot: white;
+      }
+
+
+
     </style>  
   </head>
 
@@ -94,9 +114,10 @@
 	  <p class="lead">One sentence description.</p>
 	</div>
       </div>
-
-
-
+      <div class="row-fluid pitch"
+	<div class="span5 offset1 video">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	</div>  
 
     </div>
 
