--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 	      <li class="active"><a href="#">Home</a></li>
 	      <li><a href="#about">About</a></li>
 	      <li><a href="#contact">Contact</a></li>
+	      <li><a href="#supporters">Supporters</a></li>
 	    </ul>
 	  </div><!--/.nav-collapse -->
 	</div>
@@ -140,14 +141,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Product</h1>
+	  <h1>Accelerated Engineering</h1>
 	</div>
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
 	  <!-- Special typography from Bootstrap for lead paragraph. -->
 	  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-	  <p class="lead">One sentence description.</p>
+	  <p class="lead">Spend more time engineering. Spend less time documenting.</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
@@ -197,6 +198,7 @@
 	    <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
 	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+	    <button class="btn btn-github"><i class="icon-github"></i> | Github</button>
 	  </div>
 	</div>  
       </div>
@@ -211,35 +213,26 @@
 	</div>
 	<div class="span5 copy">
 	  <p>
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-	    porta, dui sagittus hendrerit rutrum, nunc leo tempus nisl, eu
-	    mollis justo velit at nunc. Fusce nec egestas sem. Donec
-	    fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-	    volutpat lorem ut congue malesuada. In facilisis scelerisque
-	    turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-	    qum, eget rhoncus purus fringilla id. Phasellus id nibh eu
-	    risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-	    consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-	    rutrum, nunc leo tempus nisl, eu mollis justo velit at
-	    nunc. Fusce nec egestas sem. Donec fringilla.
-	  </p>
+	    You are an engineer. You cost your company $100 per hour. You spend
+	    most of your day documenting, e-mailing, reporting, presenting,
+	    checking, accounting, summarizing, arguing, negotiating, and just
+	    about anything else that is not engineering, solving problems,
+	    and delivering parts. Don't worry. We've got you covered.
+	  </p>  
 	</div>
       </div>	
 
       <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
 	  <p>  
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-	    porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-	    mollis justo velit at nunc. Fusce nec egestas sem. Donec
-	    fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-	    volutpat lorem ut congue malesuada. In facilisis scelerisque
-	    turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-	    quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-	    risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-	    consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-	    rutrum, nunc leo tempus nisl, eu mollis justo velit at
-	    nunc. Fusce nec egestas sem. Donec fringilla.
+	    The dawn of computer aided engineering was amazing, but then your boss
+	    wanted better parts. The dawn of computer aided drafting was a time
+	    saver, until they took your draftsman and told you to draw it yourself. The dawn
+	    of the information age changed the world, but made yours hell as you report
+	    to multiple managers you have never met in person while satisfying the never ending
+	    stream of information requests from the army of people who do nothing
+	    but make information requests. 
+	    Don't worry. We've got you covered
 	  </p>
 	</div>
 	<div class="span5 asset">
@@ -258,7 +251,7 @@
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse"
 		   data-parent="#accordion2" href="#collapseOne">
-		  What does FAQ stand for?
+		  Wait. What exactly do you do? 
 		</a>
 	      </div>
    	      <div id="collapseOne" class="accordion-body collapse">
@@ -288,11 +281,9 @@
       <!-- http://creativecommons.org/licenses/ -->
       <div class="row-fluid footer">
 	<div class="span12">
-	  <p>This work is licensed under
-	    the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
-	      By-SA 3.0
-	    </a>, without all the cruft that would otherwise be
-	    put at the bottom of the page.</p>
+	  <p>
+	    This page was created for the Coursera class Startup Engineering
+	  </p>
 	</div>
       <div> 	
 
